# TodoList

./: .gitignore  Dockerfile  README.md  db_connect.py  docker-compose.yaml  main.py  package-lock.json  package.json  pyproject.toml
todo_list/: __init__.py  auth.py  createTodo.py  createUser.py  db_connect.py  deleteTodo.py  deleteUser.py  friends.py  like.py  main.py  postman_test.txt  readTodo.py  schemas.py  todo.py  todo_list_db.txt  updateTodo.py  user.py
todo_list/text/: postman_test.txt  todo_list_db.txt
todo_list_ui/: .gitignore  index.html  package-lock.json  package.json
todo_list_ui/src/: App.jsx  Header.jsx  Menu.jsx
todo_list_ui/src/api/: axiosInstance.js
todo_list_ui/src/components/: ListTable.jsx
todo_list_ui/src/components/common/: AppPagination.jsx  FooterTemplet.jsx  HeaderTemplet.jsx
todo_list_ui/src/css/: menu.css
todo_list_ui/src/pages/action/: Action.jsx
todo_list_ui/src/pages/common/: Dashboard.jsx  FriendsModal.jsx  Mypage.jsx  NewTodo.jsx  RejectModal.jsx  TodoModal.jsx
todo_list_ui/src/pages/friends/: Friends.jsx
todo_list_ui/src/pages/login/: Login.jsx
todo_list_ui/src/pages/myTodo/: MyTodo.jsx
todo_list_ui/src/pages/signup/: Signup.jsx
