[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TodoList"
version = "0.1.0"
description = "TodoList 만들기"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.120.0,<1.0",
    "uvicorn[standard]>=0.18",
    "sqlalchemy>=1.4",
    "pydantic>=2.12,<3.0",
    "pymysql>=1.0"
]
